backend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: todo-backend
spec:
  containers:
    - name: todo-backend
      image: todo-backend
      ports:
        - containerPort: 5000
