backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend
spec:
  selector:
    app: todo-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
